# weather-airflow-pipeline

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: weather_dag.py
notebooks/: analysis_data.ipynb
src/: extract_data.py  load_data.py  transform_data.py
tests/: test_extract_data.py  test_load_data.py  test_transform_data.py  test_weather_dag.py
